[tool.poetry]
name = "offline-server"
version = "0.1.0"
description = ""
authors = ["khabar0val <alexander.khabarov.123@gmail.com>"]
readme = "README.md"
packages = [{include = "offline_server"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
